<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodLife</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_donor">Register as a Donor</string>
    <string name="search_donor">Search a Donor</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
 	<string name="hint_phone_number">9999999999</string>
 	<string name="hint_email_address">user@example.com</string>
 	<string name="hint_date">MM-DD-YY</string>
 	<string name="heading_register">Please fill in below details to register</string>
 	<string name="blood_group">Blood Group:</string>
 	<string name="city">City:</string>
 	<string name="last_donated_date">Last Donated Date:</string>
 	<string name="email_id">Email Id:</string>
 	<string name="phone_number">Phone Number:</string>
 	<string name="donor">Donor:</string>
</resources>