<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner_blood_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/blood_group" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/city_spinner" />

    <EditText
        android:id="@+id/last_donated_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date"
        android:inputType="date" />

    <Button
        android:id="@+id/donor_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRegisterSubmit"
        android:text="@string/register" />

</LinearLayout>